# project_delivery_etl

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/models/: base.py  connectionInfo.py  model_base.py  model_connection_info.py
app/api/routers/: connect.py  install.py
app/api/schema/: conenctionInfo.py
app/api/service/: connectService.py
app/api/util/: convert.py  regex.py
app/api/v1/: connect.py  healthCheck.py  install.py  user.py
app/core/: config.py  database.py  server.py
app/core/db/: baseAsync.py  transactional.py
app/entities/: model_base.py  model_connection_info.py
app/service/: connectService.py
app/test/app/core/db/: test_dbConnection.py
app/test/app/service/: test_connetcService.py
deliverty_etl/: env.py
deliverty_etl/versions/: d133155c3572_create_db_to_save_connection_information.py
design/Data_Modeling/: README.md
design/Development_Process/: DataModeling_process.md
design/healthCheck/: healthCehck_flow.drawio
test/app/core/db/: dbConnectio.py  test_dbConnection.py
test/app/service/: test_connetcService.py
