[tool.poetry]
name = "project-delivery-etl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "project_delivery_etl"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.10.3"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
